syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package discount;

//Discount service definition
service DiscountProtoService{
    rpc GetDiscount(GetDiscountRequest) returns (CouponModel);  
    rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
    rpc UpdateDiscount(UpdateDiscountRequest) returns  (CouponModel);
    rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

//Request and Response messages
message CouponModel{
  int32 id = 1;
  string ProductId = 2;
  string Description = 3;
  int32 Amount = 4;
}

message GetDiscountRequest{
    string ProductId = 1;
}

message CreateDiscountRequest{
    CouponModel coupon = 1;
}

message UpdateDiscountRequest{
    CouponModel coupon = 1;
}

message DeleteDiscountRequest{
    int32 ProductId = 1;
}

message DeleteDiscountResponse{
    bool Success = 1;
}